--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.github.youyinnn</groupId>
             <artifactId>you-web-utils</artifactId>
             <version>1.8.3</version>
