--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 username=root
 password=shendiyuan
-driverClass=com.mysql.jdbc.Driver
-url=jdbc:mysql:///medicine_database?characterEncoding=utf8&useSSL=true
+driverClass=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql:///medicine_database?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 initialSize=10
 maxActive=50
 minIdle=5
